prevent preview window from flickering

--- a/src/components/code-cell.css
+++ b/src/components/code-cell.css
@@ -1,12 +1,17 @@
 .progress-cover {
   height: 100%;
-  flex-grow: 1;
-  background-color: white;
+  width: 100%;
   display: flex;
   align-items: center;
   padding-left: 10%;
   padding-right: 10%;
   animation: fadeIn 0.5s;
+}
+
+.progress-wrapper {
+  height: 100%;
+  background-color: white;
+  flex-grow: 1;
 }
 
 @keyframes fadeIn{
